--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Boone Losche COOOL</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <defs>
+        <filter id="goo">
+        <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+        <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+        </filter>
+    </defs>
+</svg>
+<canvas id="canvas1"></canvas>
+
+<canvas id="canvas2"></canvas>
+
+<article>
+  To create this effect I use two overlapping canvas elements. Particles on the front layer are being blurred using SVG filter for liquid appearance. The layer behind it hides the particles themselves but connects their current position with fading lines.<br>
+</article>
+<h1>Move the mouse across canvas</h1>
+<footer>Created by <a href="https://www.youtube.com/channel/UCEqc149iR-ALYkGM6TG-7vQ" target='blank'>Frank's Laboratory</a> @2020.
+</footer>
