--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Cool Lines</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
     <defs>
         <filter id="goo">
@@ -11,9 +21,10 @@
 
 <canvas id="canvas2"></canvas>
 
-<article>
-  To create this effect I use two overlapping canvas elements. Particles on the front layer are being blurred using SVG filter for liquid appearance. The layer behind it hides the particles themselves but connects their current position with fading lines.<br>
-</article>
 <h1>Move the mouse across canvas</h1>
-<footer>Created by <a href="https://www.youtube.com/channel/UCEqc149iR-ALYkGM6TG-7vQ" target='blank'>Frank's Laboratory</a> @2020.
 </footer>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
