--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
 <canvas id="canvas2"></canvas>
 
+<article>
+  Little demo thingy, influenced from Franks Labratory on codepen<br>
+</article>
 <h1>Move the mouse across canvas</h1>
 </footer>
 <!-- partial -->
