--- a/index.html
+++ b/index.html
@@ -1,33 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cool Lines</title>
-  <link rel="stylesheet" href="./style.css">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PixelEffect</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-    <defs>
-        <filter id="goo">
-        <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
-        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-        <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
-        </filter>
-    </defs>
-</svg>
-<canvas id="canvas1"></canvas>
-
-<canvas id="canvas2"></canvas>
-
-<article>
-  Little demo thingy, influenced from Franks Labratory on codepen<br>
-</article>
-<h1>Move the mouse across canvas</h1>
-</footer>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
+    <p>COOLIO</p>
+    <canvas id = "canvas1"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
