--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <br><br>
+    <h1 style="color:white; text-align:center;font-family:'Courier New';">Click the box </h1>
+    
+
     <canvas id = "canvas1"></canvas>
     <script src="script.js"></script>
+    
 </body>
 </html>
