--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PixelEffect</title>
+    <title>Pixel Slide v0.3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <br><br>
-    <h1 style="color:white; text-align:center;font-family:'Courier New';">Click the box </h1>
+    <p style="color:white; text-align:center; font-family:'Courier New'; font-size:50px;">Click the box </p>
     
 
     <canvas id = "canvas1"></canvas>
